// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Select with many options 1`] = `
<div>
  <div
    class="wrapper select"
  >
    <div
      class="inputWrapper"
    >
      <label
        class="label"
        for="123e4567-e89b-12d3-a456-426655440005"
      />
      <select
        class="input"
        id="123e4567-e89b-12d3-a456-426655440005"
      >
        <option>
          Foo
        </option>
        <option>
          Bar
        </option>
        <option>
          Baz
        </option>
        <option>
          Quux
        </option>
      </select>
      <span
        class="postfix"
      >
        <svg
          class="Z6OfUI2sH34- TphtDHcwxDc-"
          data-testid="arrowDown"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M231.327 246.874c-5.865-5.848-13.548-8.764-21.227-8.75-7.655 0.013-15.304 2.938-21.144 8.774s-8.767 13.48-8.78 21.129c-0.013 7.684 2.913 15.372 8.78 21.235l150.147 150.271c5.868 5.865 13.558 8.795 21.249 8.795s15.381-2.931 21.249-8.795l150.147-150.145c5.868-5.863 8.795-13.551 8.781-21.235-0.015-7.649-2.94-15.293-8.781-21.129-5.837-5.835-13.489-8.76-21.144-8.774-7.679-0.013-15.363 2.903-21.227 8.75l-129.024 128.783-129.025-128.91z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders a Select with no options 1`] = `
<div>
  <div
    class="wrapper select"
  >
    <div
      class="inputWrapper"
    >
      <label
        class="label"
        for="123e4567-e89b-12d3-a456-426655440001"
      />
      <select
        class="input"
        id="123e4567-e89b-12d3-a456-426655440001"
      />
      <span
        class="postfix"
      >
        <svg
          class="Z6OfUI2sH34- TphtDHcwxDc-"
          data-testid="arrowDown"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M231.327 246.874c-5.865-5.848-13.548-8.764-21.227-8.75-7.655 0.013-15.304 2.938-21.144 8.774s-8.767 13.48-8.78 21.129c-0.013 7.684 2.913 15.372 8.78 21.235l150.147 150.271c5.868 5.865 13.558 8.795 21.249 8.795s15.381-2.931 21.249-8.795l150.147-150.145c5.868-5.863 8.795-13.551 8.781-21.235-0.015-7.649-2.94-15.293-8.781-21.129-5.837-5.835-13.489-8.76-21.144-8.774-7.679-0.013-15.363 2.903-21.227 8.75l-129.024 128.783-129.025-128.91z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders a Select with one option 1`] = `
<div>
  <div
    class="wrapper select"
  >
    <div
      class="inputWrapper"
    >
      <label
        class="label"
        for="123e4567-e89b-12d3-a456-426655440003"
      />
      <select
        class="input"
        id="123e4567-e89b-12d3-a456-426655440003"
      >
        <option>
          Foo
        </option>
      </select>
      <span
        class="postfix"
      >
        <svg
          class="Z6OfUI2sH34- TphtDHcwxDc-"
          data-testid="arrowDown"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M231.327 246.874c-5.865-5.848-13.548-8.764-21.227-8.75-7.655 0.013-15.304 2.938-21.144 8.774s-8.767 13.48-8.78 21.129c-0.013 7.684 2.913 15.372 8.78 21.235l150.147 150.271c5.868 5.865 13.558 8.795 21.249 8.795s15.381-2.931 21.249-8.795l150.147-150.145c5.868-5.863 8.795-13.551 8.781-21.235-0.015-7.649-2.94-15.293-8.781-21.129-5.837-5.835-13.489-8.76-21.144-8.774-7.679-0.013-15.363 2.903-21.227 8.75l-129.024 128.783-129.025-128.91z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly as large 1`] = `
<div>
  <div
    class="wrapper large select"
  >
    <div
      class="inputWrapper"
    >
      <label
        class="label"
        for="123e4567-e89b-12d3-a456-426655440009"
      />
      <select
        class="input"
        id="123e4567-e89b-12d3-a456-426655440009"
      >
        <option>
          Foo
        </option>
      </select>
      <span
        class="postfix"
      >
        <svg
          class="Z6OfUI2sH34- TphtDHcwxDc-"
          data-testid="arrowDown"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M231.327 246.874c-5.865-5.848-13.548-8.764-21.227-8.75-7.655 0.013-15.304 2.938-21.144 8.774s-8.767 13.48-8.78 21.129c-0.013 7.684 2.913 15.372 8.78 21.235l150.147 150.271c5.868 5.865 13.558 8.795 21.249 8.795s15.381-2.931 21.249-8.795l150.147-150.145c5.868-5.863 8.795-13.551 8.781-21.235-0.015-7.649-2.94-15.293-8.781-21.129-5.837-5.835-13.489-8.76-21.144-8.774-7.679-0.013-15.363 2.903-21.227 8.75l-129.024 128.783-129.025-128.91z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly as small 1`] = `
<div>
  <div
    class="wrapper small select"
  >
    <div
      class="inputWrapper"
    >
      <label
        class="label"
        for="123e4567-e89b-12d3-a456-426655440007"
      />
      <select
        class="input"
        id="123e4567-e89b-12d3-a456-426655440007"
      >
        <option>
          Foo
        </option>
      </select>
      <span
        class="postfix"
      >
        <svg
          class="Z6OfUI2sH34- TphtDHcwxDc-"
          data-testid="arrowDown"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M231.327 246.874c-5.865-5.848-13.548-8.764-21.227-8.75-7.655 0.013-15.304 2.938-21.144 8.774s-8.767 13.48-8.78 21.129c-0.013 7.684 2.913 15.372 8.78 21.235l150.147 150.271c5.868 5.865 13.558 8.795 21.249 8.795s15.381-2.931 21.249-8.795l150.147-150.145c5.868-5.863 8.795-13.551 8.781-21.235-0.015-7.649-2.94-15.293-8.781-21.129-5.837-5.835-13.489-8.76-21.144-8.774-7.679-0.013-15.363 2.903-21.227 8.75l-129.024 128.783-129.025-128.91z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly when disabled 1`] = `
<div>
  <div
    class="wrapper disabled select"
  >
    <div
      class="inputWrapper"
    >
      <label
        class="label"
        for="123e4567-e89b-12d3-a456-426655440011"
      />
      <select
        class="input"
        disabled=""
        id="123e4567-e89b-12d3-a456-426655440011"
      >
        <option>
          Foo
        </option>
      </select>
      <span
        class="postfix"
      >
        <svg
          class="Z6OfUI2sH34- TphtDHcwxDc-"
          data-testid="arrowDown"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M231.327 246.874c-5.865-5.848-13.548-8.764-21.227-8.75-7.655 0.013-15.304 2.938-21.144 8.774s-8.767 13.48-8.78 21.129c-0.013 7.684 2.913 15.372 8.78 21.235l150.147 150.271c5.868 5.865 13.558 8.795 21.249 8.795s15.381-2.931 21.249-8.795l150.147-150.145c5.868-5.863 8.795-13.551 8.781-21.235-0.015-7.649-2.94-15.293-8.781-21.129-5.837-5.835-13.489-8.76-21.144-8.774-7.679-0.013-15.363 2.903-21.227 8.75l-129.024 128.783-129.025-128.91z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders correctly when invalid 1`] = `
<div>
  <div
    class="wrapper invalid select"
  >
    <div
      class="inputWrapper"
    >
      <label
        class="label"
        for="123e4567-e89b-12d3-a456-426655440013"
      />
      <select
        class="input"
        id="123e4567-e89b-12d3-a456-426655440013"
      >
        <option>
          Foo
        </option>
      </select>
      <span
        class="postfix"
      >
        <svg
          class="Z6OfUI2sH34- TphtDHcwxDc-"
          data-testid="arrowDown"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class=""
            d="M231.327 246.874c-5.865-5.848-13.548-8.764-21.227-8.75-7.655 0.013-15.304 2.938-21.144 8.774s-8.767 13.48-8.78 21.129c-0.013 7.684 2.913 15.372 8.78 21.235l150.147 150.271c5.868 5.865 13.558 8.795 21.249 8.795s15.381-2.931 21.249-8.795l150.147-150.145c5.868-5.863 8.795-13.551 8.781-21.235-0.015-7.649-2.94-15.293-8.781-21.129-5.837-5.835-13.489-8.76-21.144-8.774-7.679-0.013-15.363 2.903-21.227 8.75l-129.024 128.783-129.025-128.91z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
